@@ -209,4 +209,32 @@ class Login {
         $this->{$type} = new lgnHooks($this,$config);
         return $this->hooks;
     }
+
+    /**
+     * Overrides modx->executeProcessor to provide better support
+     */
+    public function executeProcessor(array $options = array()) {
+        $processor = isset($options['processors_path']) && !empty($options['processors_path']) ? $options['processors_path'] : $this->modx->config['processors_path'];
+        if (isset($options['location']) && !empty($options['location'])) $processor .= $options['location'] . '/';
+        $processor .= str_replace('../', '', $options['action']) . '.php';
+        if (file_exists($processor)) {
+            if (!isset($this->modx->lexicon)) $this->modx->getService('lexicon', 'modLexicon');
+            if (!isset($this->modx->error)) $this->modx->request->loadErrorHandler();
+
+            /* create scriptProperties array from HTTP GPC vars */
+            if (!isset($_POST)) $_POST = array();
+            if (!isset($_GET)) $_GET = array();
+            $scriptProperties = array_merge($_GET,$_POST,$options);
+            if (isset($_FILES) && !empty($_FILES)) {
+                $scriptProperties = array_merge($scriptProperties,$_FILES);
+            }
+
+            $modx =& $this->modx;
+            $login =& $this;
+            $result = include $processor;
+        } else {
+            $this->modx->log(modX::LOG_LEVEL_ERROR, "Processor {$processor} does not exist; " . print_r($options, true));
+        }
+        return $result;
+    }
 }
